--- a/Login/style.css
+++ b/Login/style.css
@@ -1,131 +1,133 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html,body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
-.container{
-    background-color: rgb(49, 39, 39);
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-   
+.container {
+  background-color: rgb(49, 39, 39);
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
-.form{
-    background-color: rgb(8, 7, 7);
-    height: 75vh;
-    width: 45vw;
-    border-radius: 6px;
-    position: absolute;
-    top: 50%; 
-    left: 50%;
-    transform: translate(-50%,-50%);
+.form {
+  background-color: rgb(8, 7, 7);
+  height: 70vh;
+  width: 45vw;
+  border-radius: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-h3{
-    color: rgba(15, 245, 7, 0.989);
-    /* position: absolute; */
-    text-transform: uppercase;
-    text-align: center ;
-    margin-top: 2em;
-    font-size: 25px;
+h3 {
+  color: rgba(15, 245, 7, 0.989);
+  /* position: absolute; */
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 2em;
+  font-size: 25px;
 }
-.username,.pwd{
-    width: 80%;
-    padding: 15px 45px 15px 10px;
-    font-size: 17px;
-    /* text-align: center; */
-    background: rgb(32, 26, 26);
-    border: 1px solid black;
-    border-radius: 5px;
+.username,
+.pwd {
+  width: 80%;
+  padding: 15px 45px 15px 10px;
+  font-size: 17px;
+  /* text-align: center; */
+  background: rgb(32, 26, 26);
+  border: 1px solid black;
+  border-radius: 5px;
 }
-.inputdivs{
-    width: 45vw;
-    height: 20vh;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    /* background-color: blue; */
-    margin-top: 30px;
+.inputdivs {
+  width: 45vw;
+  height: 20vh;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  /* background-color: blue; */
+  margin-top: 30px;
 }
 .footer {
-    display: inline-flex;
-    /* background-color: aqua; */
-    /* height: 5vh; */
-    width: 36vw;
-    margin-top: 2em;
-    margin-left: 3.6em;
-    align-items: center;
-    justify-content: space-between;
+  display: inline-flex;
+  /* background-color: aqua; */
+  /* height: 5vh; */
+  width: 36vw;
+  margin-top: 10px;
+  margin-left: 3.6em;
+  align-items: center;
+  justify-content: space-between;
 }
-.forgot{
-    color: white;
-    cursor: pointer;
+.forgot {
+  color: white;
+  cursor: pointer;
 }
-.signup{
-    color: rgba(15, 245, 7, 0.989);
-    cursor: pointer;
+.signup {
+  color: rgba(15, 245, 7, 0.989);
+  cursor: pointer;
 }
 .submit {
-    background-color: rgba(10, 174, 4, 0.989);
-    border: none;
-    padding: 10px 9em;
-    color: black;
-    font-size: 16px;
-    font-weight: 600;
-    text-align: center;
-    margin: 3em 0 0 6.8em;
-    border-radius: 2px;
+  background-color: rgba(10, 174, 4, 0.989);
+  border: none;
+  padding: 10px 9em;
+  color: black;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  margin: 3em 0 0 6.8em;
+  border-radius: 2px;
 }
-.submit:hover{
-    cursor: pointer;
-    background-color: rgba(15, 197, 8, 0.989);
+.submit:hover {
+  cursor: pointer;
+  background-color: rgba(15, 197, 8, 0.989);
 }
 
-@media only screen and (max-width: 853px){
-    .form {
-        height: 23vh;
-        width: 75vw;
-        border-radius: 6px;
-    }
-    h3 {
-        
-        margin-top: 1em;
-        font-size: 18px;
-    }   
-    .inputdivs {
-        width: 75vw;
-        height: 8vh;
-        margin-top: 10px;
-        justify-content: space-between;
-    }
-    .username, .pwd {
-        width: 81%;
-        padding: 7px 45px 7px 6px;
-        font-size: 12px;
-        letter-spacing: 1px;
-    }
-    .footer {
-        display: inline-flex;
-        /* width: 36vw; */
-        margin-top: 12px;
-        margin-left: 2.2em;
-        align-items: center;
-        justify-content: space-between;
-        width: 57vw;
-    }
-    .signup,.forgot {
-        font-size: 15px;
-    
-    }
-    .submit {
-        padding: 5px 4em;
-        font-size: 12px;
-        margin: 1.4em 0 0 6.8em;
-    }
+@media only screen and (max-width: 853px) {
+  .form {
+    height: 23vh;
+    width: 75vw;
+    border-radius: 6px;
+  }
+  h3 {
+    margin-top: 1em;
+    font-size: 18px;
+  }
+  .inputdivs {
+    width: 75vw;
+    height: 8vh;
+    margin-top: 10px;
+    justify-content: space-between;
+  }
+  .username,
+  .pwd {
+    width: 81%;
+    padding: 7px 45px 7px 6px;
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+  .footer {
+    display: inline-flex;
+    /* width: 36vw; */
+    margin-top: 12px;
+    margin-left: 4.01em;
+    align-items: center;
+    justify-content: space-between;
+    width: 59vw;
+  }
+  .signup,
+  .forgot {
+    font-size: 15px;
+  }
+
+  .submit {
+    padding: 5px 4em;
+    font-size: 12px;
+    margin: 2.4em 0 0 17.8em;
+  }
 }
